adding dom tests

--- a/app/index.html
+++ b/app/index.html
@@ -122,7 +122,7 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="http://185.13.90.140:8081/socket.io/socket.io.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
