added tests for tabs

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
       <ul class="nav nav-tabs" role="tablist" id="navigationTabs">
         <li role="presentation"><a href="#chat" aria-controls="home" role="tab" data-toggle="tab">Chat</a></li>
         <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Photos</a></li>
-        <li role="presentation"  class="activeq"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+        <li role="presentation"  class="active"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
       </ul>
 
       <!-- Tab panes -->
@@ -122,7 +122,8 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/lodash/dist/lodash.core.min.js"></script>
+    <script src="http://185.13.90.140:8081/socket.io/socket.io.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
